# BLIP

./: .gitignore  blip_caption_train.py  blip_qa_train copy.py  blip_qa_train.py  blip_qa_train_bak.py  ckpts  clip3d_train.py  extract_caption_by_blip.py  pyproject.toml  vaeblip_qa_train.py
blip/: model.py
clip3d/: __init__.py  configuration_clip3d.py  modeling_clip3d.py
mobilevlm/: conversation.py
mobilevlm/model/: mobilevlm.py  vision_encoder.py
mobilevlm/train/: llama_flash_attn.py  train_mem.py
scripts/: blip_qa_rec.sh  clip3d.sh  inference.py  llava_clip_vit_l_336_ldp2_mobilellama_chat_1.7b.sh  llava_siglip_vit_l_384_mobilellama_chat_1.4b.sh  mobilevlm_med_3b.sh  vaeblip_qa_rec.sh
scripts/benchmark/: gqa.sh
scripts/eval/: gqa.sh  vqav2.sh
